<resources>
    <string name="app_name">EventApp</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title_home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">Favorite</string>
    <string name="setting">Setting</string>
    <string name="upcoming">Upcoming</string>
    <string name="finished">Finished</string>
    <string name="notification">Notification</string>
    <string name="hint_search">Search Event...</string>
    <string name="banner_upcoming">Banner Upcoming</string>
    <string name="banner_finished">Banner Finished</string>
    <string name="_0">0</string>
    <string name="media_cover_upcoming">Media Cover Upcoming</string>
    <string name="upcoming_title">Upcoming Title</string>
    <string name="event_favorite">Event Favorite</string>
    <string name="image_event">Image Event</string>
    <string name="event">Event</string>
    <string name="online">Online</string>
    <string name="category">Category</string>
    <string name="quoat_format">Quota: %d</string>
    <string name="datetimes_format">Datetimes: %s</string>
    <string name="description">Description</string>
    <string name="register">Register</string>
    <string name="button_back">Button Back</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="not_found">Not Found</string>
    <string name="format_last_time">%s ago</string>
    <string name="sub_daily_reminder">Set at 12 o\'clock every day</string>
</resources>