<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="dev.mayutama.project.eventapp.ui.main.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_upcoming"
        android:name="dev.mayutama.project.eventapp.ui.main.upcomming.UpcomingFragment"
        android:label="@string/upcoming"
        tools:layout="@layout/fragment_upcomming" />

    <fragment
        android:id="@+id/navigation_finished"
        android:name="dev.mayutama.project.eventapp.ui.main.finished.FinishedFragment"
        android:label="@string/finished"
        tools:layout="@layout/fragment_finished" />


    <fragment
        android:id="@+id/navigation_favorite"
        android:name="dev.mayutama.project.eventapp.ui.main.favorite.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite" />


    <fragment
        android:id="@+id/navigation_setting"
        android:name="dev.mayutama.project.eventapp.ui.main.setting.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_setting" />
</navigation>