<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.eventDetail.EventDetailActivity"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/img_event"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            tools:srcCompat="@tools:sample/backgrounds/scenic"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/image_event"/>

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="@dimen/base"
            android:background="@drawable/bg_oval_white_transparent"
            android:padding="@dimen/base"
            android:src="@drawable/baseline_arrow_back_ios_new_24"
            android:contentDescription="@string/button_back"/>

        <ImageButton
            android:id="@+id/btn_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/base"
            android:background="@drawable/bg_oval_white_transparent"
            android:padding="@dimen/base"
            android:src="@drawable/ic_favorite_border"
            android:contentDescription="@string/button_back"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="500dp"
            android:background="@drawable/bg_top_radius"
            app:layout_constraintTop_toBottomOf="@id/img_event"
            android:layout_marginTop="-24dp"
            android:elevation="@dimen/small"
            android:paddingBottom="@dimen/base"
            style="@style/BaseContainerSecondaryStyle">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/large"
                android:text="@string/event"
                android:textSize="22sp"
                android:textStyle="bold"
                android:paddingHorizontal="@dimen/base"/>

            <TextView
                android:id="@+id/tv_owner_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                android:layout_marginTop="@dimen/base"
                android:text="@string/format_owner"
                android:textSize="18sp"
                android:paddingHorizontal="@dimen/base"/>

            <TextView
                android:id="@+id/tv_quota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/tv_category"
                app:layout_constraintBottom_toBottomOf="@id/tv_category"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/extra_small"
                android:layout_marginEnd="@dimen/base"
                android:text="@string/quoat_format"/>

            <TextView
                android:id="@+id/tv_city_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_owner_name"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/base"
                android:layout_marginTop="@dimen/base"
                android:text="@string/online"
                android:paddingVertical="@dimen/small"
                android:paddingHorizontal="@dimen/base"
                style="@style/StyleOnlineBadge"/>

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_owner_name"
                app:layout_constraintStart_toEndOf="@id/tv_city_name"
                android:layout_marginStart="@dimen/base"
                android:layout_marginTop="@dimen/base"
                android:text="@string/category"
                android:paddingVertical="@dimen/small"
                android:paddingHorizontal="@dimen/base"
                style="@style/StyleCategoryBadge"/>

            <TextView
                android:id="@+id/tv_times"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_category"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginHorizontal="@dimen/base"
                android:layout_marginTop="@dimen/base"
                android:text="@string/datetimes_format"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_times"
                android:layout_marginTop="@dimen/base"
                android:layout_marginHorizontal="@dimen/base"/>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_description"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="@dimen/base"
                android:text="@string/register"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/loading_layout"
            layout="@layout/layout_animation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>