<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.home.HomeFragment"
    android:background="@color/white"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.search.SearchBar
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_search"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/base"
            android:elevation="0dp"
            app:elevation="0dp"
            app:backgroundTint="#4D8ECAE6"/>

        <!-- Upcoming Banner -->

        <TextView
            android:id="@+id/tv_upcoming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/search_bar"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/upcoming"
            android:textStyle="bold"
            android:textColor="?attr/colorPrimary"
            android:textSize="22sp"
            android:layout_marginTop="@dimen/large"
            android:layout_marginHorizontal="@dimen/base" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp_upcoming"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_constraintTop_toBottomOf="@id/tv_upcoming" 
            android:layout_marginTop="@dimen/base"
            tools:listitem="@layout/item_banner_upcoming"/>
        
        <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
            android:id="@+id/dots_upcoming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/vp_upcoming"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:dotsSize="@dimen/small"
            app:dotsColor="?attr/colorPrimary"
            app:selectedDotColor="?attr/colorPrimaryVariant"
            android:layout_marginTop="@dimen/base"/>

        <!-- End Upcoming Banner -->

        <!-- Finished Banner -->
        <TextView
            android:id="@+id/tv_finished"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/dots_upcoming"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/finished"
            android:textStyle="bold"
            android:textColor="?attr/colorPrimary"
            android:textSize="22sp"
            android:layout_marginTop="@dimen/large"
            android:layout_marginHorizontal="@dimen/base" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_finished"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_finished"
            android:layout_marginHorizontal="@dimen/base"
            tools:listitem="@layout/item_finished_home"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>